# quiz-crawler

./: .gitignore  pyproject.toml
src/: main.py
src/core/: __init__.py  config.py
src/util/: __init__.py
src/util/crawling/: __init__.py  driver.py  worker.py
src/util/openAPI/: __init__.py  kobis.py
src/util/regex/: __init__.py  expression.py
